--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,12 @@
     },
     "require": {
         "php": ">=7.1",
-        "illuminate/hashing": "5.7.*",
+        "illuminate/hashing": "5.8.*",
         "tymon/jwt-auth": "1.*",
-        "illuminate/cookie": "5.7.*",
-        "illuminate/routing": "5.7.*",
-        "illuminate/http": "5.7.*",
-        "dingo/api": "2.0.0-alpha2"
+        "illuminate/cookie": "5.8.*",
+        "illuminate/routing": "5.8.*",
+        "illuminate/http": "5.8.*",
+        "dingo/api": "2.2.*"
     },
     "authors": [
         {
@@ -26,6 +26,6 @@
             "email": "jusajdurim@gmail.com"
         }
     ],
-    "minimum-stability": "stable",
-    "prefer-dist": true
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
